Debugging missing More Sun icon from plant show page

--- a/app/views/plants/create_plant.erb
+++ b/app/views/plants/create_plant.erb
@@ -3,7 +3,7 @@
      <a href="/" class="brand-logo">PlantTrack</a>
      <ul class="right hide-on-med-and-down">
        <li><a href="/plants">Browse</a></li>
-       <li><a href="/my-plants">My Plants</a></li>
+       <li><a href="/greenhouse">My Plants</a></li>
        <li class="active"><a href="/plants/new">Create Plant</a></li>
        <li><a href="/logout" class="waves-effect waves-light btn light-green darken-4">Logout</a></li>
      </ul>
